--- a/docs/thesis.tex
+++ b/docs/thesis.tex
@@ -161,7 +161,7 @@
 
 \title{Genome folding in evolution and disease}
 \author{Jonas Ibn-Salem}
-\date{2018-02-14}
+\date{2018-02-15}
 
 \usepackage{amsthm}
 \newtheorem{theorem}{Theorem}[chapter]
@@ -280,14 +280,14 @@ for any cell type, developmental state, and environmental condition.
 Gene expression is therefore complex and controlled on many molecular
 levels \citep{Lelli2012}.
 
-The initial sequencing of the human genome reviled a large resource of
-information on the genetic sequence, however, we are still far from
-complete understanding of the sequence itself. While functional
-knowledge of individual genes and its activity, evolution and
-associations to diseases accumulates over the last years, the non-coding
-parts of the genome is only very recently annotated in large
+The initial sequencing of the human genome reviled a tremendous resource
+of information on the genetic sequence. However, we are still far from
+complete understanding of the sequence information itself. While
+functional knowledge of individual genes and its activity, evolution,
+and associations to diseases accumulates over the last years, the
+non-coding parts of the genome are only very recently annotated in large
 collaborative efforts \citep{Dunham2012, Kundaje2015, Andersson2014}.
-These efforts lead to an increased understanding of the regulatory
+These projects lead to an increased understanding of the regulatory
 potential of non-coding regions and its dynamics across conditions.
 
 The genomic DNA sequence itself encodes cis-regulatory modules (CRMs) to
@@ -310,6 +310,8 @@ development and morphological diversification in evolution, are driven
 by activation changes of enhancers \citep{Long2016}.
 
 However, the genome is still largely considered as - From 1D to 3D
+
+--\textgreater{}
 
 \hypertarget{enhancers}{%
 \section{Enhancers}\label{enhancers}}
@@ -335,13 +337,13 @@ enhancer, but only by combinatorial repression of several weak enhancers
 \citep{Xie2017}. Enhancers are reviewed in more detail in
 \citet{Spitz2012}, \citet{Andrey2017}, and \citet{Long2016}.
 
-\hypertarget{methods-to-probe-the-3d-chromatin-archtiecture}{%
+\hypertarget{methods-to-probe-the-3d-chromatin-architecture}{%
 \section{Methods to probe the 3D chromatin
-archtiecture}\label{methods-to-probe-the-3d-chromatin-archtiecture}}
+architecture}\label{methods-to-probe-the-3d-chromatin-architecture}}
 
-\hypertarget{microscopy-based-techniques-to-visuallize-the-genome-in-3d}{%
-\subsection{Microscopy-based techniques to visuallize the genome in
-3D}\label{microscopy-based-techniques-to-visuallize-the-genome-in-3d}}
+\hypertarget{microscopy-based-techniques-to-visualize-the-genome-in-3d}{%
+\subsection{Microscopy-based techniques to visualize the genome in
+3D}\label{microscopy-based-techniques-to-visualize-the-genome-in-3d}}
 
 Historically, the organization of chromosomes and specific loci within
 the nucleus have mostly been studied using fluorescent \emph{in situ}
@@ -375,11 +377,11 @@ chromosome conformation capture (3C) experiment \citep{Dekker2002}. 3C
 works by the ability to cross-link two genomic loci that are in close
 physical proximity in the nuclear space by treating cells with
 formaldehyde leading to covalent bonds between proteins and DNA with
-proteins \citep{Hoffman2015}. The cross-linked chromatin is than
+proteins \citep{Hoffman2015}. The cross-linked chromatin is then
 digested by enzymes to fragment the genomic DNA. Than, re-ligation of
 fragmented DNA result in hybrid DNA molecules of restriction fragments
-that where in close physical proximity during cross-linking but
-originate from different regions in the linear genome sequence
+that were in close physical proximity during cross-linking but originate
+from different regions in the linear genome sequence
 \citep{Dekker2013, Andrey2017} (Fig. \ref{fig:ProximityLigation}A).
 
 \begin{figure}
@@ -392,7 +394,7 @@ originate from different regions in the linear genome sequence
 measure chromatin interactions} \textbf{(A)} By treating cells with
 formaldehyde chromatin is crosslinked. After fragmentation with
 restriction enzymes, DNA from two loci in close physical proximity in
-the nucleus is ligated to a hybrid DNA molecules that is than made from
+the nucleus is ligated to a hybrid DNA molecule that is then made from
 DNA that originated from two regions distal in the linear genome
 (indicated in red and blue). \textbf{(B)} Different variants of the 3C
 experiments differ in their approaches to measure the ligation products
@@ -414,11 +416,11 @@ adapted from \citep{Dekker2013}.}\label{fig:ProximityLigation}
 There exist several 3C-based methods which differ by the way the
 ligation product, which represents and chromatin interaction, is
 measured and quantified (Fig. \ref{fig:ProximityLigation}B). The classic
-3C protocol allows to quantify hybrid DNA-product by quantitative PCR
+3C protocol allows quantifying hybrid DNA-product by quantitative PCR
 using specific primers to amplify the product junction
 \citep{Dekker2002}. In Circular chromosome conformation capture (4C)
 experiments, a circular PCR is used to amplify all hybrid DNA products
-that are ligated with a desired restriction fragment, e.g.~a specific
+that are ligated with the desired restriction fragment, e.g.~a specific
 viewpoint of interest. These products are then sequences to generate an
 interaction profile measuring all interacting regions with this
 viewpoint \citep{Simonis2006, Noordermeer2011}. Another variant of 3C,
@@ -439,26 +441,26 @@ The most unbiased method to quantify all pair-wise interactions
 genome-wide is Hi-C \citep{Lieberman-Aiden2009}. After the initial
 restriction enzyme step of 3C, in Hi-C, the ends are filled with a
 biotin-marked nucleotide and subsequently re-ligated. A streptavidin
-pull-down step is used to enrich for the chimeric products, which are
-then sequenced using paired-end sequencing technology. Each read from
-the resulting read-pairs is then aligned independently to the reference
-genome to identify the originating position of the sequenced restriction
-fragment. Each read pair represent a pairwise physical interaction of
-the corresponding regions. Interaction frequencies are usually analyzed
-by binning the genome into equal sized regions of several kb depending
-on sequencing depth. While the first Hi-C study produced genome-wide
-interactions at 1Mb resolution \citep{Lieberman-Aiden2009}, more recent
-studies could analyse folding patterns at 40kb \citep{Dixon2012}, and
-later up to 1kb resolution \citep{Rao2014}.
+pull-down step enriches the chimeric products, which are then sequenced
+using paired-end sequencing technology. Each read from the resulting
+read-pairs is then aligned independently to the reference genome to
+identify the originating position of the sequenced restriction fragment.
+Each read pair represents a pairwise physical interaction of the
+corresponding regions. Interaction frequencies are usually analyzed by
+binning the genome into equal-sized regions of several kb depending on
+sequencing depth. While the first Hi-C study produced genome-wide
+interactions at a 1Mb resolution \citep{Lieberman-Aiden2009}, more
+recent studies could analyze folding patterns at 40kb \citep{Dixon2012}
+and later up to 1kb resolution \citep{Rao2014}.
 
 \hypertarget{hierarchy-of-chromatin-3d-structure}{%
 \section{Hierarchy of chromatin 3D
 structure}\label{hierarchy-of-chromatin-3d-structure}}
 
-The three-dimensonal organization of genome folding was studied
-extensively in recent years and is reviewd comprehensively by leading
-expertes in the field
-\citep{Pombo2015, Sexton2015, Bouwman2015, Dekker2016, Dixon2016, Schmitt2016, Bonev2016, Hnisz2016, Merkenschlager2016, Long2016, Ruiz-Velasco2017, Andrey2017}.
+The three-dimensional organization of genome folding was studied
+extensively in recent years and is reviewed comprehensively by leading
+experts in the field
+\citep{Pombo2015, Sexton2015, Bouwman2015, Dekker2016, Dixon2016, Schmitt2016, Bonev2016, Hnisz2016a, Merkenschlager2016, Long2016, Ruiz-Velasco2017, Andrey2017}.
 
 \begin{figure}
 
@@ -484,34 +486,34 @@ contacts}\label{chromosomal-territories-and-inter-chromosomal-contacts}}
 The eukaryotic genome is highly organized in the interphase nucleus.
 Chromosomes occupy distinct spatial regions, called chromosome
 territories, and intermingle less than one would expect by chance
-\citep{Cremer2001}. This was first observed using imaging based
-approaches, and is reflected in Hi-C interaction maps, where
+\citep{Cremer2001}. This was first observed using imaging-based
+approaches and is reflected in Hi-C interaction maps, where
 inter-chromosomal contacts occur an order of magnitudes less frequent
 than intra-chromosomal contacts \citep{Lieberman-Aiden2009}. However,
-despite this spatial segregation of chromosome, intermingling of
+despite this spatial segregation of chromosome, an intermingling of
 chromosome occurs and is associated with chromosomal translocations
 \citep{Branco2006, Roukos2013, Roukos2014}. There are also specific gene
 regulatory interactions between different chromosomes
-\citep{DeLaat2007}, for example olfactory receptor genes cluster densely
-in the nucleus of olfactory neurons to facilitate mono-allelic
+\citep{DeLaat2007}, for example, olfactory receptor genes cluster
+densely in the nucleus of olfactory neurons to facilitate mono-allelic
 expression of a single receptor gene per cell \citep{Monahan2015}.
-Togther, there exists only a few but specific inter-chromosomal contacts
-and the genome is non-randomly organized in the nucleus by chromosomes
-occupying distinct spatial territories.
+Together, there exists only a few, but specific inter-chromosomal
+contacts and the genome is non-randomly organized in the nucleus by
+chromosomes occupying distinct spatial territories.
 
 \hypertarget{ab-compartments}{%
 \subsection{A/B compartments}\label{ab-compartments}}
 
 The ability to measure genome-wide chromatin contacts using Hi-C,
 revealed that individual regions on chromosomes segregate by
-preferential interactions into two mayor clusters, referred to as
+preferential interactions into two major clusters, referred to as
 A/B-compartments \citep{Lieberman-Aiden2009}. Interestingly, regions in
-A-compartments are associated with active histone-modifications and
+A-compartments are associated with active histone modifications and
 active transcription, whereas B-compartment is associated with
 heterochromatin, lamina association, and repressed genes
-\citep{Bonev2016}. More recnetly, higher resolution Hi-C maps further
-subdevided A/B compartments into six sub-compartments with prefferntial
-interacitons and associations to distinct chromatin features
+\citep{Bonev2016}. More recently, higher resolution Hi-C maps further
+subdivided A/B compartments into six sub-compartments with preferential
+interactions and associations with distinct chromatin features
 \citep{Rao2014}.
 
 \hypertarget{topologically-associating-domains-tads}{%
@@ -539,7 +541,7 @@ drastically \citep{Dixon2012}. Other algorithms compute an insulation
 score as the extent to which interactions cross potential TAD boundaries
 \citep{Crane2015}. Later the Arrowhead algorithm was introduced to find
 ``contact domains'' as smaller nested structures along the diagonal of
-high resolution Hi-C matrices \citep{Rao2014}. Furthermore, when
+high-resolution Hi-C matrices \citep{Rao2014}. Furthermore, when
 analyzing Hi-C interactions at different length scales, hierarchies of
 TADs and sub-TADs could be identified that overlap each other
 \citep{Filippova2014, Fraser2015}. The different algorithms and
@@ -547,15 +549,15 @@ parameters used in each study is only one source of variation in
 reliably identifying TADs. Also, the resolution of Hi-C maps, which is
 mainly defined by sequencing depths but also the Hi-C protocol itself
 \citep{Rao2014}, as well as different normalization strategies for Hi-C
-contacts introduce variability \citep{Dali2017, Forcato2017}. Therefore,
-the number and size of TADs varies between different studies, making it
-difficult to compare TADs in different conditions and species across
-studies.
+contacts introduces variability \citep{Dali2017, Forcato2017}.
+Therefore, the number and size of TADs vary between different studies,
+making it difficult to compare TADs in different conditions and species
+across studies.
 
 The first studies on TADs identified around 3,000 TADs with a median
 size of \textasciitilde{}800 kb in human and mouse genomes
-\citep{Dixon2012} and arround 1,200 physical domains of arround 100 kb
-in \emph{Drosophila} genomes \citep{Sexton2012}. Analysis of 1kb or 5kb
+\citep{Dixon2012} and around 1,200 physical domains of around 100 kb in
+\emph{Drosophila} genomes \citep{Sexton2012}. Analysis of 1kb or 5kb
 resolution Hi-C matrices resulted in nested ``contact domains'' with a
 median size of 185 kb (range 40 kb - 3 Mb) in human and mouse cells
 \citep{Rao2014}.
@@ -567,26 +569,61 @@ interaction maps with previous microscopy observations, is that TADs in
 \emph{Drosophila} correspond to bands of polytene chromosomes
 \citep{Eagen2015}.
 
-The spatial positioning of TADs correlate with many genomic features
+The spatial positioning of TADs correlates with many genomic features
 measured along the linear genome \citep{Merkenschlager2016}. TAD
 boundaries are enriched for binding of ``insulator proteins'', such as
 CTCF in mammals and CP190 in Drosophila \citep{Dixon2012, Sexton2012}.
 Furthermore, TAD boundaries are associated with active chromatin, such
 as H3K4me3 and H3K27me3, DNase I hypersensitivity, active transcription,
 short interspersed nuclear elements (SINEs), and house-keeping genes
-\citep{Dixon2012}. TADs correspond to regions of early and late
-replication timing \citep{Pope2014, Dileep2015} and lamina associated
-domains (LADs) \citep{Dixon2012}. Importantly, enhancer-promoter
-interactions seems to be mostly constrained within TADs
-\citep{Shen2012, Ghavi-helm2014, Symmons2014}
+\citep{Dixon2012}. Furthermore, TADs correspond to regions of early and
+late replication timing \citep{Pope2014, Dileep2015} and
+lamina-associated domains (LADs) \citep{Dixon2012}. Importantly,
+enhancer-promoter interactions seem to be mostly constrained within TADs
+\citep{Shen2012, Ghavi-helm2014, Symmons2014} and initial studies report
+slightly increased co-expression of genes within the same TAD
+\citep{Nora2012}.
 
 Altogether, there is accumulating evidence that TADs are fundamental
 units of chromosome organization \citep{Dixon2016}
 
-\hypertarget{chromatin-loops}{%
-\subsection{Chromatin loops}\label{chromatin-loops}}
+\hypertarget{sub-tad-structures-and-chromatin-loops}{%
+\subsection{Sub-TAD structures and chromatin
+loops}\label{sub-tad-structures-and-chromatin-loops}}
 
-Recent studies provide functional insights about how chromatin loops are
+Globally, higher-order interactions between different TADs leads to a
+tree-like hierarchy of TADs and meta-TADs across genomic scales up to
+the range of entire chromosomes \citep{Fraser2015}. Similar than
+A/B-compartments, these three structures correlate with epigenetic marks
+and expression changes during cell differentiation \citep{Fraser2015}.
+
+However, TADs can also be divided further into smaller regions with
+stronger preferential interactions within them, which are often referred
+to as sub-TADs \citep{Phillips-Cremins2013}. They might correspond to
+contact domains which were later identified using high-resolution Hi-C
+\citep{Rao2014}. While sub-TADs display the same self-association
+features as TADs with decreased contact frequencies across sub-TAD
+boundaries, sub-TADs seems to be less stable across different cell types
+and tissues and are stronger related to tissue-specific gene expression
+\citep{Berlivet2013, Phillips-Cremins2013}. Smaller structural units
+within TADs were also reported from studies CTCF and cohesin mediated
+interactions using ChiA-PET \citep{Dowen2014, Hnisz2016a}
+
+\begin{itemize}
+\tightlist
+\item
+  long distnace between regulatory regions and genes in vertebrate genes
+\end{itemize}
+
+To function as a transcriptional regulator an enhancer needs to be
+brought into close spatial proximity with its target promoter through
+chromatin looping. For example, the enhancers of the \(\beta\)-globin
+gene interact strongly with its target gene via long-range chromatin
+contacts in erythroid cells where the \(\beta\)-globin gene is active
+but shows little or no interactions in cells from different lineages
+\citep{Palstra2003}.
+
+Recent studies provide functional insights into how chromatin loops are
 formed and highlight the role of architectural proteins such as CTCF and
 cohesin \citep{Merkenschlager2016}. CTCF recognizes a specific sequence
 motif, to which it binds with high affinity \citep{Kim2007, Nagy2016}.
@@ -604,9 +641,9 @@ In summary, these findings suggest a hierarchical organization of
 chromosome architecture. First, dynamic nucleosome contacts from
 clutches and fibers. These engage in long-range chromatin loops, some of
 which are stabilized by architectural proteins, such as CTCF and
-cohesin, and lead to the formation of TADs. TADs form cluster by their
-epigenomic type into A/B compartments and coalescence of compartments in
-the same chromosome forms chromosome territories \citep{Bonev2016}.
+cohesin, and lead to the formation of TADs. TADs form clusters by their
+epigenomic type into A/B compartments, and coalescence of compartments
+in the same chromosome forms chromosome territories \citep{Bonev2016}.
 
 \hypertarget{molecular-mechanisms-of-tad-and-loop-formation}{%
 \subsection{Molecular mechanisms of TAD and loop
@@ -614,12 +651,12 @@ formation}\label{molecular-mechanisms-of-tad-and-loop-formation}}
 
 Several initial studies analyzed the role of CTCF and cohesin in TAD
 formation. In two studies depletion of cohesin reduced interactions
-within TADs but did not alter TAD strucures completley
+within TADs but did not alter TAD structures completely
 \citep{Seitan2013, Zuin2014}. One study report a significant increase in
-interactions between differnt TADs after cohesin depletion
-\citep{Sofueva2013}. Depletio of CTCF had a similar effect with
+interactions between different TADs after cohesin depletion
+\citep{Sofueva2013}. Depletion of CTCF had a similar effect with
 increased inter-domains interactions \citep{Seitan2013, Zuin2014}. These
-result suggest a functinoal role of cohesin and CTCF in
+results suggest a functional role of cohesin and CTCF in
 promoter-enhancer interactions and TAD formation \citep{Pombo2015}.
 
 \hypertarget{dynamics-of-chromatin-structure}{%
@@ -627,13 +664,13 @@ promoter-enhancer interactions and TAD formation \citep{Pombo2015}.
 structure}\label{dynamics-of-chromatin-structure}}
 
 Proximity ligation experiments like Hi-C measure contact frequencies as
-average over millions of cells used in the experiments. Therefore,
-identified contacts might not be present in each individual cells and
-can be can be dynamic over short time-scales in each individual cell. It
-is important to keep in mind how chromosome folding change during cell
+average over millions of cells in the sample. Therefore, identified
+contacts might not be present in each individual cells and could be in
+principle very dynamic over short time-scales in individual cells. It is
+important to keep in mind how chromosome folding change during cell
 division. Spatial organization is generally studied in non-synchronous
 cells, of which interphase cells make up the biggest proportion
-\citep{Bouwman2015}. In interphase, chromosomes are decondenced and
+\citep{Bouwman2015}. In interphase, chromosomes are decondensed and
 hierarchically organized into the territories, compartments, and TADs as
 described above. To prepare for cell division chromosomes untangle and
 condense, while transcription ceases almost entirely. Mitotic
@@ -641,17 +678,18 @@ chromosomes do not show preferential organization, such as compartments
 or TADs \citep{Naumova2013}. Enhancer-promoter looping might be absent
 as well \citep{Dekker2014}. After cell division, chromosomes decondense
 and fold into the interphase hierarchy. While individual genes are
-relatively mobile during early G1 phase, they become quickly constrained
-to a small nuclear sub-volume, after which genome folding is relatively
-stable for the rest of the interphase \citep{Chubb2002, Walter2003}.
-These dynamics during cell-cycle raise the question of how the pattern
-of 3D organization is re-established with each cell division.
+relatively mobile during the early G1 phase, they become quickly
+constrained to a small nuclear sub-volume, after which genome folding is
+relatively stable for the rest of the interphase
+\citep{Chubb2002, Walter2003}. These dynamics during cell-cycle raise
+the question of how the pattern of 3D organization is re-established
+with each cell division.
 
 \hypertarget{variation-of-chromatin-structure-across-cell-types}{%
 \subsection{Variation of chromatin structure across cell
 types}\label{variation-of-chromatin-structure-across-cell-types}}
 
-The primary domain architecture of chromatin is largely preserved in
+The primary domain architecture of chromatin is mostly preserved in
 different cell types and even across species \citep{Dixon2012, Rao2014}.
 However, chromatin dynamics specify distinct gene expression programs
 and biological functions \citep{Bonev2016}. One example of dynamic
@@ -661,15 +699,15 @@ TAD structures were observed on the active X chromosome, only two very
 large domains were identified on the inactive X chromosome in
 \emph{Drosophila} and human \citep{Deng2015, Rao2014}. Other examples
 include differences in terminally differentiated post-mitotic cells. For
-example, rod photo-receptor cells in nocturnal mammals have an unusual,
+example, rod photoreceptor cells in nocturnal mammals have an unusual,
 inverted nuclear architecture, in which heterochromatin is enriched in
 the center of the nucleus and is absent from the periphery
 \citep{Solovei2013}. Further biological processes related to cell cycle
-exit strongly affect chromatin three-dimensional organization. These are
+exit strongly affect three-dimensional chromatin organization. These are
 quiescence in yeast, where intrachromosomal contacts increase
 \citep{Rutledge2015}, and senescence, where heterochromatin relocalizes
 from the nuclear periphery to the interior \citep{Chandra2015}. However,
-A/B compartments and TADs seems to be largley unaffected in these
+A/B compartments and TADs seems to be largely unaffected in these
 processes \citep{Criscione2016}.
 
 Subtler effects of changes in chromatin reorganization are observed
@@ -704,10 +742,12 @@ that transcription status is coordinated within TADs.
 \begin{itemize}
 \tightlist
 \item
-  Add percentage of shared boundaries between cell types
+  Add the percentage of shared boundaries between cell types
   \citep{Dixon2012, Rao2014}.
 \item
   Summary of dynamics
+\item
+  Add figure 5 from \citep{Andrey2017} as figure.
 \end{itemize}
 
 \hypertarget{evolution-of-chromatin-organization}{%
@@ -752,18 +792,35 @@ but also remarkably similar between homologous regions in mouse and
 human \citep{Dixon2012}. More than 54\% of TAD boundaries in human hESC
 cells occur at homologous genomic positions in mouse ESCs
 \citep{Dixon2012}. Similarly, 45\% of contact domains called in mouse
-B-lymphoblasts were also identified at homologous regions in human
+B-lymphoblasts were also identified in homologous regions in human
 lymphoblastoid cells \citep{Rao2014}. A single TAD boundary at the Six
 gene loci could be traced back in evolution to the origin of
 deuterostomes \citep{Gomez-Marin2015}. However, these analyses focused
 only on the subset of syntenic regions that can be mapped uniquely
-between genomes. Initial comparative Hi-C studies identified several
-evolutionary breakpoints at TAD boundaries and hihglights a major role
-of conserved CTCF binding sites in facilitating conservation of TADs
-\citep{VietriRudan2015}. However, it remains to be investigated
-systematically if TAD regions as a whole might be stable or disrupted by
-rearrangements during evolution and how this is associated to conserved
-or divergent transcriptional regulation between species.
+between genomes.
+
+During evolution, the genome sequence underwent several types of
+mutations. While single nucleotide mutations only alter a single DNA
+base at a time, structural variants (SVs) modify larger chromosomal
+regions by deletions, duplications, inversions, or translocations.
+Thereby deletions and duplications can alter the copy number of genes.
+The breakpoint of such rearrangements can also lead to disruption of
+genes or gene fusion. However, rearrangement breakpoints can also alter
+the regulatory environment of genes by disrupting regulatory regions,
+such as enhancers, or their interactions. Comparative genomic analysis
+of two species can identify evolutionary rearrangements by altered
+adjacencies of orthologous genes.
+
+Initial comparative Hi-C studies identified several evolutionary
+breakpoints at TAD boundaries and highlighted an important role of
+conserved CTCF binding sites in facilitating conservation of TADs
+\citep{VietriRudan2015}. Initial comparative Hi-C studies identified
+several evolutionary breakpoints at TAD boundaries and highlighted an
+important role of conserved CTCF binding sites in facilitating
+conservation of TADs \citep{VietriRudan2015}. However, it remains to be
+investigated systematically if TAD regions as a whole might be stable or
+disrupted by rearrangements during evolution and how this is associated
+with conserved or divergent transcriptional regulation between species.
 
 \hypertarget{disruption-of-chromatin-architecture-in-disease}{%
 \section{Disruption of chromatin architecture in
@@ -773,52 +830,52 @@ The insulating function of TADs restricting promoter-enhancer
 interactions \citep{Symmons2014} suggests that alternations of TAD
 structures may induce ectopic interactions between regulatory elements
 and genes in neighboring TADs, leading to gene dysregulation (Fig.
-\#ref(fig:EnhancerAdoption)).
+\ref{fig:EnhancerAdoption}).
 
 Several experiments of genetic manipulation of specific TAD boundaries
 can change the surrounding interaction patterns and thus affect the
 expression of nearby genes. After experimental deletion of a 58-kb
 region encompassing a TAD boundary in mouse ESC, interactions between
-adjacent TADs significantly increase and genes in neighboring TADs were
+adjacent TADs significantly increased and genes in neighboring TADs were
 upregulated \citep{Nora2012}. More precise deletion or inversion of CTCF
 binding site at loop anchors in TAD boundaries altered local chromatin
 architecture and nearby gene expression
 \citep{Dowen2014, Guo2015, Narendra2015}.
 
 The alternation of chromatin contacts upon TAD boundary disruptions
-leads to the question whether disrutpion of TADs could also be and
-mechansim of disease pathology. This hypothesis were initilay dirven by
-studying the etiology of the Liebernberg syndrome, in which an
-upper-limb malformation phenotype is casued by deletion in the vinicity
-of \emph{PITX1} gene. \emph{PITX1} becomes therby accessible to an
-enhancer with specific activity in lower-limb and was missexpressed in a
-corresponding mouse model \citep{Spielmann2012}. An overlap of thes
-deletion with later identifed TAD boundaries lead to the hypothesis of
-an regulatory effect mechanism of boundary deletions referred to as
-enhancer adoption \citep{Spielmann2013a}.
+leads to the question whether disruption of TADs could also be and
+mechanism of disease pathology. This hypothesis was initially discussed
+by studying the etiology of the Liebenberg syndrome, in which an
+upper-limb malformation phenotype is caused by a deletion in the
+vicinity of the \emph{PITX1} gene. \emph{PITX1} becomes thereby
+accessible to an enhancer with specific activity in lower-limb and was
+miss-expressed in a corresponding mouse model \citep{Spielmann2012}.
+Overlap of this deletion with later identified TAD boundaries leads to
+the hypothesis of a regulatory effect mechanism of boundary deletions
+referred to as enhancer adoption \citep{Spielmann2013a}.
 
-An association of TAD disrutpions with disease was first shown by
-computational analysis integrating TAD structures, with tissue specific
-enhancers, and large crhomosomal deletions associated with clinical
+An association of TAD disruptions with diseases was first shown by
+computational analysis integrating TAD structures, with tissue-specific
+enhancers, and large chromosomal deletions associated with clinical
 phenotypes \citep{Ibn-Salem2014}.
 
 In this study, the Human Phenotype Ontology database \citep{Kohler2014}
 was used to relate the phenotypes of 922 deletion cases from the
 DECIPHER database \citep{Firth2009} to monogenic diseases associated
 with genes in or adjacent to the deletions. This was used to
-differntiate for each deletion case between two possible pathogenic
+differentiate for each deletion case between two possible pathogenic
 effect mechanism that best explains the phenotypes observed in the
-patients. Many deletions could be explained by a gene dosage mechansim
+patients. Many deletions were best explained by a gene dosage mechanism
 and haploinsufficiency of genes located within the deletion. However,
-about 12 percent of cases could be best explained by a TAD boundary
-disruption and a specific combinations of tissue-specific enhancers and
+about 12 percent of cases were best explained by a TAD boundary
+disruption and specific combinations of tissue-specific enhancers and
 genes in adjacent TADs. Importantly, randomization of phenotype data
 showed that this enhancer adaption mechanism was significantly more
-frequent then expected by chance \citep{Ibn-Salem2014}. Therfore, this
-study shows for the first time an association of TAD disrutpiton with
-genetic diseases and highglight an regulatory effect mechansims of TAD
-disruption that need to be further investigated and has to be considered
-when interpreting the gentic variations in patient genomes.
+frequent than expected by chance \citep{Ibn-Salem2014}. Therefore, this
+study shows for the first time an association of TAD disruption with
+genetic diseases and describes a regulatory effect mechanism of TAD
+disruptions that need to be further investigated and has to be
+considered when interpreting genetic variations in patient genomes.
 
 \begin{figure}
 
@@ -836,8 +893,8 @@ are shown in (B) as black ovals. \textbf{(A)} Gene-dosage effect. A
 deletion leads to a reduction in the dosage of haplosensitive genes
 located within the CNV. The individual with the deletion has two
 phenotypic abnormalities (HP1, HP2) resulting from deletion of two
-haplosensitive genes. AMendelian disease related to mutations in the
-first gene is associated with HP1, and aMendelian disease related to
+haplosensitive genes. A Mendelian disease related to mutations in the
+first gene is associated with HP1, and a Mendelian disease related to
 mutations in the second gene is associated with HP2. \textbf{(B)} TAD
 boundary deletion and enhancer adoption. Removal of the topological
 domain boundary allows the tissue-specific enhancer inappropriately to
@@ -845,7 +902,7 @@ activate a phenotypically relevant gene located adjacent to the
 deletion, a phenomenon that we refer to as enhancer adoption. In this
 case, the individual with the deletion has a phenotypic abnormality
 (HP3) that is also seen in individuals with a Mendelian disease related
-to a mutation in the gene adjacent to the deletion. Figure adopted from
+to a mutation in the gene adjacent to the deletion. Figure adapted from
 \citep{Ibn-Salem2014}.}\label{fig:EnhancerAdoption}
 \end{figure}
 
@@ -871,17 +928,27 @@ to a mutation in the gene adjacent to the deletion. Figure adopted from
 
 
 
-Intersingly, these initial results are largly confirmed by very recent
-studies investigating structural variants that disrupt TADs and lead to
-ectopic gene expression in genetic diseases
+Interestingly, these initial results are largely confirmed by very
+recent studies investigating structural variants that disrupt TADs and
+lead to ectopic gene expression in genetic diseases
 \citep{Lupianez2015, Franke2016, Redin2017} and cancers
 \citep{Northcott2014, Hnisz2016, Weischenfeldt2016}. This is discussed
-in more detial in secion \#ref(thesis-discussion).
+in more detail in section \#ref(thesis-discussion).
+
+Together, these observations lead to the questions whether other types
+of structural variants, like translocations and inversions, could also
+disrupt TADs and regulatory interactions of genes. To analyze such a
+position effect, we need careful integration of diverse genomic and
+phenotypic data. Computational tools could predict the impact of
+rearrangement breakpoints on TAD disruption and potential regulatory
+effects on phenotypically relevant genes. Such a method would improve
+molecular diagnoses of many patients with variants of unknown
+significance.
 
 \hypertarget{aims-of-this-thesis}{%
 \section{Aims of this thesis}\label{aims-of-this-thesis}}
 
-The recent advances of genome-wide ligation proximity mapping revealed
+The recent advances in genome-wide ligation proximity mapping revealed
 that interphase chromosomes are highly organized and structurally
 segregate into TADs. TADs were already shown to associate with diverse
 genomic functions such as histone modifications
@@ -890,7 +957,7 @@ gene expression correlation \citep{Nora2012, LeDily2014}. We previously
 showed a significant association of TAD disruptions by large chromosomal
 deletions with clinical phenotypes, likely caused by an enhancer
 adaption mechanism \citep{Ibn-Salem2014, Lupianez2015}. However, it is
-still unclear how exactley the genome folds into TADs and what
+still unclear how exactly the genome folds into TADs and what
 consequence this has for gene regulation during evolution and in genetic
 diseases. For example, it is not clear to which extends genes within the
 same TAD are expressed and regulated in a coordinated manner. Despite
@@ -898,9 +965,9 @@ initial evidence of evolutionary conservation of TADs in homologous
 regions between human and mouse \citep{Dixon2012, VietriRudan2015},
 there was no systematic analysis of the stability of TADs during
 evolution and the consequences of TAD disruptions on gene expression
-divergence between species. The accumulating evidence of the important
+divergence between species. The accumulating evidence of the critical
 gene regulatory function of TADs leads to the question if TADs play an
-important role in genetic diseases \citep{Spielmann2016}. More
+essential role in genetic diseases \citep{Spielmann2016}. More
 specifically, TADs might be used together with other genomic
 annotations, such as enhancers and their interactions with regulated
 genes to interpret structural variations in patient genomes.
@@ -908,8 +975,8 @@ Furthermore, increasing mechanistic understanding of chromatin looping
 interactions and TAD formation could be used to improve genome-wide
 contact maps and predict long-range interactions in diverse tissues and
 conditions. Therefore, this thesis addresses the question whether TADs
-represent only structural units of the genome or also important
-functional building blocks in which gene regulation is coordinated. By
+represent only structural units of genomes or also crucial functional
+building blocks and necessary for coordinated gene regulation. By
 computationally integrating genome-wide chromatin interaction maps with
 diverse genomic datasets, including sequence conservation, regulatory
 activity, protein binding, gene expression and clinical phenotypes, I
@@ -971,8 +1038,8 @@ looping interactions?}
 \begin{itemize}
 \tightlist
 \item
-  Does the cross-linking effect in ChIP-seq provide specific signals at
-  interacting chromatin loop anchors?
+  Does the cross-linking effect in ChIP-seq provide characteristic
+  signals at interacting chromatin loop anchors?
 \item
   Does the genomic sequence encode features that are predictive for
   long-range chromatin interactions?
@@ -989,7 +1056,7 @@ looping interactions?}
 
 The following four chapters address and discuss the questions raised
 above. First, the focus is on duplicated genes in the human genome.
-Because of their related sequence and function, shared evolutionary
+Because of their related sequences and functions, a shared evolutionary
 history, and close colocalization in the genome they represent an
 interesting model to study how genome folding is related to regulation
 of gene expression during evolution (Chapter \ref{paralog-regulation}).
@@ -1004,7 +1071,7 @@ miss-regulation of genes in disrupted TADs (Chapter
 \ref{position-effect}). Finally, I make use of recent insights in
 chromatin loop formation to provide a computational tool for predicting
 long-range chromatin contacts from largely available ChIP-seq data, with
-the aim to facilitate three-dimensonal folding analyisis in diverse
+the aim to facilitate three-dimensional folding analysis in diverse
 tissues and conditions for which Hi-C like data is not available
 (Chapter \ref{loop}). The overall findings are then discussed together
 with further research perspectives (Chapter \ref{thesis-discussion}).
@@ -5050,10 +5117,6 @@ on TAD structures. While in neutral selection
   Relate to GRBs and CNE clusters
   \citep{Harmston2017, Polychronopoulos2017}
 \end{itemize}
-
-\hypertarget{tad-disruption-as-a-new-mechanism-of-disease-pathogenesis.}{%
-\section{TAD disruption as a new mechanism of disease
-pathogenesis.}\label{tad-disruption-as-a-new-mechanism-of-disease-pathogenesis.}}
 
 The majority of disease-associated variants uncovered by genome-wide
 association studies (GWAS) reside in noncoding sequences. Many variants
